--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dist",
     "src"
   ],
+  "repository": {
+    "url": "https://github.com/LUISITOEBS/lb-product-card",
+    "type": "git"
+  },
   "engines": {
     "node": ">=10"
   },
@@ -14,6 +18,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
+    "test:watch": "tsdx test --watch",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
@@ -47,18 +52,39 @@
     }
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
     "@rollup/plugin-image": "^3.0.3",
     "@size-limit/preset-small-lib": "^11.1.2",
-    "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
+    "@types/react-test-renderer": "^18.0.7",
+    "@types/react": "^18.2.73",
+    "babel-jest": "^29.7.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "postcss": "^8.4.38",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "react": "^18.2.0",
     "rollup-plugin-postcss": "^4.0.2",
     "size-limit": "^11.1.2",
     "tsdx": "^0.14.1",
     "tslib": "^2.6.2",
     "typescript": "^5.4.3"
+  },
+  "keywords": [
+    "product",
+    "card",
+    "Luis",
+    "Ballesteros"
+  ],
+  "dependencies": {
+    
+  },
+  "jest":{
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
